clusters/home-cluster/apps/argocd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argo.local.lan`)
      priority: 10
      services:
        - name: argocd-server
          port: 8080
    - kind: Rule
      match: Host(`argo.local.lan`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 8080
          scheme: h2c
